Change toList method to return an immutable List with List.of() instead of Arraylist. The change is reflected in the test class. Removal of assignments to local variables in callToAnyMapMethodShouldNotChangeCallingObject in test class.